--- a/src/main/resources/templates/Administrador/editEscuela.html
+++ b/src/main/resources/templates/Administrador/editEscuela.html
@@ -63,7 +63,7 @@
             <div class="card-body col-md-6">
                 <form th:action="@{/admin/post/editEscuela}" th:object="${escuela}" method="post">
                     <input hidden th:field="*{idEscuela}">
-                    <input type="button" class="btn btn-secondary mb-4" value="Regresar" onclick="location.href='./displayEscuelas'" /></td>
+                    <input type="button" class="btn btn-secondary mb-4" value="Regresar" onclick="location.href='./displayEscuelas'" />
                     <div class="form-group row">
                         <div class="col-sm-3">Nombre: </div>
                         <div class="col-sm-9">
