--- a/src/main/resources/templates/Autenticacion/Registrarse.html
+++ b/src/main/resources/templates/Autenticacion/Registrarse.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <button class="btn btn-lg btn-success btn-block mt-4" type="submit">Registrar</button>
-                    <p class="mt-4 text-center">¿Ya tienes cuenta? <span><a href="/Login">Iniciar Sesión</a></span></p>
+                    <p class="mt-4 text-center">¿Ya tienes cuenta? <span><a href="/login">Iniciar Sesión</a></span></p>
                     <p class="mt-3 mb-0 text-muted text-center">&copy; Proyecto Capas 2020</p>
                 </form>
             </div>
